// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions bulkUpdate() should call the job API with the view JSON in it's params because the view is dirty 1`] = `
Object {
  "delete": Array [],
  "get": Array [],
  "head": Array [],
  "list": Array [],
  "options": Array [],
  "patch": Array [],
  "post": Array [
    Object {
      "data": "{\\"type\\":\\"jobTypeValue\\",\\"scheduled_datetime\\":\\"2018-10-01T00:00:15.000Z\\",\\"params\\":{\\"view\\":{\\"filters\\":{},\\"type\\":\\"ticket-list\\"},\\"exampleVar\\":\\"exampleValue\\"}}",
      "headers": Object {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json;charset=utf-8",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "post",
      "timeout": 0,
      "transformRequest": Array [
        [Function],
      ],
      "transformResponse": Array [
        [Function],
      ],
      "url": "/api/jobs/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "put": Array [],
}
`;

exports[`actions bulkUpdate() should call the job API with the view id in it's params because the view is not dirty 1`] = `
Object {
  "delete": Array [],
  "get": Array [],
  "head": Array [],
  "list": Array [],
  "options": Array [],
  "patch": Array [],
  "post": Array [
    Object {
      "data": "{\\"type\\":\\"jobTypeValue\\",\\"scheduled_datetime\\":\\"2018-10-01T00:00:15.000Z\\",\\"params\\":{\\"view_id\\":1,\\"exampleVar\\":\\"exampleValue\\"}}",
      "headers": Object {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json;charset=utf-8",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "post",
      "timeout": 0,
      "transformRequest": Array [
        [Function],
      ],
      "transformResponse": Array [
        [Function],
      ],
      "url": "/api/jobs/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "put": Array [],
}
`;

exports[`actions deleteView() should prevent deletion of last view of same type 1`] = `
Object {
  "delete": Array [],
  "get": Array [],
  "head": Array [],
  "list": Array [],
  "options": Array [],
  "patch": Array [],
  "post": Array [],
  "put": Array [],
}
`;

exports[`actions deleteView() should prevent deletion of last view of same type 2`] = `Array []`;

exports[`actions deleteView() should redirect to other view of same type when delete succeeds 1`] = `
Object {
  "delete": Array [
    Object {
      "data": undefined,
      "headers": Object {
        "Accept": "application/json, text/plain, */*",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "delete",
      "timeout": 0,
      "transformRequest": Array [
        [Function],
      ],
      "transformResponse": Array [
        [Function],
      ],
      "url": "/api/views/1/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "get": Array [],
  "head": Array [],
  "list": Array [],
  "options": Array [],
  "patch": Array [],
  "post": Array [],
  "put": Array [],
}
`;

exports[`actions deleteView() should redirect to other view of same type when delete succeeds 2`] = `
Array [
  Object {
    "type": "ADD_RECENT_VIEW",
    "viewId": 2,
  },
  Object {
    "type": "SET_VIEW_ACTIVE",
    "view": Immutable.Map {
      "id": 2,
      "type": "ticket-list",
    },
  },
]
`;

exports[`actions deleteViewSuccess() should redirect to other view of same type when view is active 1`] = `
Array [
  Object {
    "type": "DELETE_VIEW_SUCCESS",
    "viewId": 1,
  },
  Object {
    "type": "ADD_RECENT_VIEW",
    "viewId": 1,
  },
  Object {
    "type": "SET_VIEW_ACTIVE",
    "view": Immutable.Map {
      "id": 1,
      "type": "ticket-list",
    },
  },
]
`;

exports[`actions fetchActiveViewTickets should fetch tickets 1`] = `
Array [
  Object {
    "discreet": true,
    "type": "FETCH_LIST_VIEW_START",
    "viewId": 1,
  },
]
`;

exports[`actions fetchViewItems should fetch current page with cursor 1`] = `
Array [
  Object {
    "discreet": false,
    "type": "FETCH_LIST_VIEW_START",
    "viewId": 1,
  },
  Object {
    "data": Object {
      "data": Array [
        Object {
          "id": 1,
        },
        Object {
          "id": 2,
        },
      ],
      "meta": Object {
        "current_cursor": 123,
        "next_items": "/api/views/1/items?direction=next",
        "prev_items": "/api/views/1/items?direction=prev",
      },
    },
    "type": "FETCH_LIST_VIEW_SUCCESS",
    "viewType": "ticket-list",
  },
]
`;

exports[`actions fetchViewItems should fetch current page with cursor 2`] = `
Object {
  "delete": Array [],
  "get": Array [
    Object {
      "data": undefined,
      "headers": Object {
        "Accept": "application/json, text/plain, */*",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "get",
      "timeout": 0,
      "transformRequest": Array [
        [Function],
      ],
      "transformResponse": Array [
        [Function],
      ],
      "url": "/api/views/1/items/?cursor=1234",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "head": Array [],
  "list": Array [],
  "options": Array [],
  "patch": Array [],
  "post": Array [],
  "put": Array [],
}
`;

exports[`actions fetchViewItems should fetch current page without cursor 1`] = `
Array [
  Object {
    "discreet": false,
    "type": "FETCH_LIST_VIEW_START",
    "viewId": 1,
  },
  Object {
    "data": Object {
      "data": Array [
        Object {
          "id": 1,
        },
        Object {
          "id": 2,
        },
      ],
      "meta": Object {
        "current_cursor": 123,
        "next_items": "/api/views/1/items?direction=next",
        "prev_items": "/api/views/1/items?direction=prev",
      },
    },
    "type": "FETCH_LIST_VIEW_SUCCESS",
    "viewType": "ticket-list",
  },
]
`;

exports[`actions fetchViewItems should fetch current page without cursor 2`] = `
Object {
  "delete": Array [],
  "get": Array [
    Object {
      "data": undefined,
      "headers": Object {
        "Accept": "application/json, text/plain, */*",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "get",
      "timeout": 0,
      "transformRequest": Array [
        [Function],
      ],
      "transformResponse": Array [
        [Function],
      ],
      "url": "/api/views/1/items/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "head": Array [],
  "list": Array [],
  "options": Array [],
  "patch": Array [],
  "post": Array [],
  "put": Array [],
}
`;

exports[`actions fetchViewItems should fetch next page 1`] = `
Array [
  Object {
    "discreet": false,
    "type": "FETCH_LIST_VIEW_START",
    "viewId": 1,
  },
  Object {
    "data": Object {
      "data": Array [
        Object {
          "id": 1,
        },
        Object {
          "id": 2,
        },
      ],
      "meta": Object {
        "current_cursor": 123,
        "next_items": "/api/views/1/items?direction=next",
        "prev_items": "/api/views/1/items?direction=prev",
      },
    },
    "type": "FETCH_LIST_VIEW_SUCCESS",
    "viewType": "ticket-list",
  },
]
`;

exports[`actions fetchViewItems should fetch next page 2`] = `
Object {
  "delete": Array [],
  "get": Array [
    Object {
      "data": undefined,
      "headers": Object {
        "Accept": "application/json, text/plain, */*",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "get",
      "timeout": 0,
      "transformRequest": Array [
        [Function],
      ],
      "transformResponse": Array [
        [Function],
      ],
      "url": "/api/views/1/items?direction=next&cursor=123&ignored_item=7",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "head": Array [],
  "list": Array [],
  "options": Array [],
  "patch": Array [],
  "post": Array [],
  "put": Array [],
}
`;

exports[`actions fetchViewItems should fetch prev page 1`] = `
Array [
  Object {
    "discreet": false,
    "type": "FETCH_LIST_VIEW_START",
    "viewId": 1,
  },
  Object {
    "data": Object {
      "data": Array [
        Object {
          "id": 1,
        },
        Object {
          "id": 2,
        },
      ],
      "meta": Object {
        "current_cursor": 123,
        "next_items": "/api/views/1/items?direction=next",
        "prev_items": "/api/views/1/items?direction=prev",
      },
    },
    "type": "FETCH_LIST_VIEW_SUCCESS",
    "viewType": "ticket-list",
  },
]
`;

exports[`actions fetchViewItems should fetch prev page 2`] = `
Object {
  "delete": Array [],
  "get": Array [
    Object {
      "data": undefined,
      "headers": Object {
        "Accept": "application/json, text/plain, */*",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "get",
      "timeout": 0,
      "transformRequest": Array [
        [Function],
      ],
      "transformResponse": Array [
        [Function],
      ],
      "url": "/api/views/1/items?direction=prevcursor=123&ignored_item=7",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "head": Array [],
  "list": Array [],
  "options": Array [],
  "patch": Array [],
  "post": Array [],
  "put": Array [],
}
`;

exports[`actions fetchViewItems should not dispatch FETCH_LIST_VIEW_SUCCESS because the filters of the view have changed since we started the request 1`] = `
Array [
  Object {
    "discreet": false,
    "type": "FETCH_LIST_VIEW_START",
    "viewId": 1,
  },
]
`;

exports[`actions fetchViewItems should not dispatch FETCH_LIST_VIEW_SUCCESS because the filters of the view have changed since we started the request 2`] = `
Object {
  "delete": Array [],
  "get": Array [
    Object {
      "data": undefined,
      "headers": Object {
        "Accept": "application/json, text/plain, */*",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "get",
      "timeout": 0,
      "transformRequest": Array [
        [Function],
      ],
      "transformResponse": Array [
        [Function],
      ],
      "url": "/api/views/1/items/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "head": Array [],
  "list": Array [],
  "options": Array [],
  "patch": Array [],
  "post": Array [],
  "put": Array [],
}
`;

exports[`actions fetchViewItems should not dispatch FETCH_LIST_VIEW_SUCCESS because the view for which we fetched items is not the current view 1`] = `
Array [
  Object {
    "discreet": false,
    "type": "FETCH_LIST_VIEW_START",
    "viewId": 1,
  },
]
`;

exports[`actions fetchViewItems should not dispatch FETCH_LIST_VIEW_SUCCESS because the view for which we fetched items is not the current view 2`] = `
Object {
  "delete": Array [],
  "get": Array [
    Object {
      "data": undefined,
      "headers": Object {
        "Accept": "application/json, text/plain, */*",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "get",
      "timeout": 0,
      "transformRequest": Array [
        [Function],
      ],
      "transformResponse": Array [
        [Function],
      ],
      "url": "/api/views/1/items/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "head": Array [],
  "list": Array [],
  "options": Array [],
  "patch": Array [],
  "post": Array [],
  "put": Array [],
}
`;

exports[`actions fetchViewItems should not dispatch FETCH_LIST_VIEW_SUCCESS because this fetch was caused by the polling, and the user is not currently on the first page 1`] = `
Array [
  Object {
    "discreet": true,
    "type": "FETCH_LIST_VIEW_START",
    "viewId": 1,
  },
]
`;

exports[`actions fetchViewItems should not dispatch FETCH_LIST_VIEW_SUCCESS because this fetch was caused by the polling, and the user is not currently on the first page 2`] = `
Object {
  "delete": Array [],
  "get": Array [
    Object {
      "data": undefined,
      "headers": Object {
        "Accept": "application/json, text/plain, */*",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "get",
      "timeout": 0,
      "transformRequest": Array [
        [Function],
      ],
      "transformResponse": Array [
        [Function],
      ],
      "url": "/api/views/1/items/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "head": Array [],
  "list": Array [],
  "options": Array [],
  "patch": Array [],
  "post": Array [],
  "put": Array [],
}
`;

exports[`actions fetchViewItems should not dispatch results when cancelling the fetch 1`] = `
Array [
  Object {
    "discreet": null,
    "type": "FETCH_LIST_VIEW_START",
    "viewId": 1,
  },
]
`;

exports[`actions fetchViewItems should pass the view because it is dirty 1`] = `
Array [
  Object {
    "discreet": false,
    "type": "FETCH_LIST_VIEW_START",
    "viewId": 1,
  },
  Object {
    "data": Object {
      "data": Array [
        Object {
          "id": 1,
        },
        Object {
          "id": 2,
        },
      ],
      "meta": Object {
        "current_cursor": 123,
        "next_items": "/api/views/1/items?direction=next",
        "prev_items": "/api/views/1/items?direction=prev",
      },
    },
    "type": "FETCH_LIST_VIEW_SUCCESS",
    "viewType": "ticket-list",
  },
]
`;

exports[`actions fetchViewItems should pass the view because it is dirty 2`] = `
Object {
  "delete": Array [],
  "get": Array [],
  "head": Array [],
  "list": Array [],
  "options": Array [],
  "patch": Array [],
  "post": Array [],
  "put": Array [
    Object {
      "data": "{\\"view\\":{\\"id\\":1,\\"type\\":\\"ticket-list\\",\\"filters\\":\\"eq(ticket.channel, 'chat')\\"}}",
      "headers": Object {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json;charset=utf-8",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "put",
      "timeout": 0,
      "transformRequest": Array [
        [Function],
      ],
      "transformResponse": Array [
        [Function],
      ],
      "url": "/api/views/1/items/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
}
`;

exports[`actions fieldEnumSearch() should dispatch results 1`] = `
Immutable.List [
  Immutable.Map {
    "id": 1,
    "name": "Name 1",
    "email": "name1@foo.bar",
  },
  Immutable.Map {
    "id": 2,
    "name": "Name 2",
    "email": "name2@foo.bar",
  },
  Immutable.Map {
    "id": 3,
    "name": "Name 3",
    "email": "name3@foo.bar",
  },
]
`;

exports[`actions submitView() should create view when id is 0 1`] = `
Object {
  "delete": Array [],
  "get": Array [],
  "head": Array [],
  "list": Array [],
  "options": Array [],
  "patch": Array [],
  "post": Array [
    Object {
      "data": "{\\"display_order\\":null,\\"type\\":\\"ticket-list\\",\\"name\\":\\"My Tickets\\",\\"shared_with_users\\":[1],\\"visibility\\":\\"private\\",\\"filters\\":\\"eq(ticket.channel, \\\\\\"chat\\\\\\")\\"}",
      "headers": Object {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json;charset=utf-8",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "post",
      "timeout": 0,
      "transformRequest": Array [
        [Function],
      ],
      "transformResponse": Array [
        [Function],
      ],
      "url": "/api/views/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "put": Array [],
}
`;

exports[`actions submitView() should create view when id is 0 2`] = `
Array [
  Object {
    "type": "SUBMIT_VIEW_START",
  },
  Object {
    "resp": Object {
      "id": 1,
      "slug": "my-tickets",
    },
    "type": "SUBMIT_NEW_VIEW_SUCCESS",
  },
]
`;

exports[`actions submitView() should update view 1`] = `
Object {
  "delete": Array [],
  "get": Array [],
  "head": Array [],
  "list": Array [],
  "options": Array [],
  "patch": Array [],
  "post": Array [],
  "put": Array [
    Object {
      "data": "{\\"id\\":99,\\"type\\":\\"ticket-list\\",\\"name\\":\\"My Tickets\\",\\"filters\\":\\"eq(ticket.channel, \\\\\\"chat\\\\\\")\\"}",
      "headers": Object {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json;charset=utf-8",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "put",
      "timeout": 0,
      "transformRequest": Array [
        [Function],
      ],
      "transformResponse": Array [
        [Function],
      ],
      "url": "/api/views/99/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
}
`;

exports[`actions submitView() should update view 2`] = `
Array [
  Object {
    "type": "SUBMIT_VIEW_START",
  },
]
`;

exports[`actions updateRecentViews should update updated datetime of recent views 1`] = `
Object {
  "type": "UPDATE_RECENT_VIEWS",
  "viewIds": Array [
    1,
  ],
}
`;

exports[`actions updateRecentViews should update updated datetime of recent views 2`] = `
Array [
  Object {
    "type": "UPDATE_RECENT_VIEWS",
    "viewIds": Array [
      1,
    ],
  },
]
`;
